Fix logo watermark getting cut off when page content is very short

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -15,6 +15,8 @@ body {
 	@media(min-width: 1200px) {
 		font-size: 12pt;
 	}
+
+	min-height: 100vh;
 }
 
 main {
